--- a/lectures/lec03_20250923/lec03_activity.ipynb
+++ b/lectures/lec03_20250923/lec03_activity.ipynb
@@ -34,7 +34,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -442,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qss20",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
