--- a/lectures/lec05_20250930/lec05_lecture.ipynb
+++ b/lectures/lec05_20250930/lec05_lecture.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf5c1a76-8798-4626-9ff5-0aceb138eb32",
+   "id": "40472b88-374f-4145-973d-286e5264af8f",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -159,18 +159,96 @@
    },
    "source": [
     "\n",
-    "### `*args` and `**kwargs`\n",
-    "\n",
-    "* Often seen in official documents, e.g. [here](https://matplotlib.org/3.5.3/api/_as_gen/matplotlib.pyplot.bar.html)\n",
-    "* See the source code\n",
-    "* Helpful for **wrappers** that forward extra args/kwargs\n",
+    "### Receiving extra positional args: `*args`\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "88915ac3-73bc-4773-8a9a-0c7fa6b17d0d",
+   "execution_count": 2,
+   "id": "6c339570-1bd7-4cc5-a5b3-8c46caebe80d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean(*nums: float) -> float:\n",
+    "    \"\"\"Accept any number of positional numbers.\"\"\"\n",
+    "    if not nums:\n",
+    "        raise ValueError(\"Provide at least one number\")\n",
+    "    return sum(nums) / len(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ce86c165-3e52-44da-b25d-a2981ec90468",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean(1, 2, 3)        # 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e6a3a9d3-3883-4918-9574-1890972fcff6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean(10, 20, 30, 40) # 25.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "243a6a06-8f7b-4828-8746-9e9ea300be82",
+   "metadata": {},
+   "source": [
+    "* `*nums` is a **tuple** of all extra positional arguments.\n",
+    "* Works with any iterable when **unpacked** (see §3)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb20dbaf-da55-4b4a-87a7-7d42c33d371b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "\n",
+    "\n",
+    "### Receiving extra keyword args: `**kwargs`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b3e3d91b-c3d2-4f28-a370-3bd2fc71a3de",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -180,14 +258,48 @@
    },
    "outputs": [],
    "source": [
-    "def wrapper(x, *args, scale=1.0, **kwargs):\n",
-    "    \"\"\"Forward any extra args/kwargs to the inner function.\"\"\"\n",
-    "    return inner(x, *args, scale=scale, **kwargs)"
+    "def connect(host: str, **options):\n",
+    "    \"\"\"\n",
+    "    host: required\n",
+    "    options: arbitrary keyword options like timeout=..., retries=...\n",
+    "    \"\"\"\n",
+    "    timeout = options.get(\"timeout\", 5)\n",
+    "    retries = options.get(\"retries\", 2)\n",
+    "    secure  = options.get(\"secure\", True)\n",
+    "    return {\"host\": host, \"timeout\": timeout, \"retries\": retries, \"secure\": secure}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b4a1efd8-e15b-428d-bf43-672075edfdc4",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'example.com', 'timeout': 10, 'retries': 5, 'secure': True}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connect(\"example.com\", timeout=10, retries=5)\n",
+    "# {'host': 'example.com', 'timeout': 10, 'retries': 5, 'secure': True}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa3729c6-9993-49f3-b3c6-9a417d158fa2",
+   "id": "75178b47-120e-4af4-adc6-e30cec5ff247",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -196,8 +308,189 @@
     "tags": []
    },
    "source": [
-    "* `*args`: tuple of extra **positional** args.\n",
-    "* `**kwargs`: dict of extra **keyword** args."
+    "* `**options` is a **dict** of extra named options."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d24b2ec0-13a0-4648-a785-7d9fce676d09",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Unpacking when **calling** a function\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c6a9867b-c310-43e5-86cc-df359bcce9a0",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def area(width: int, height: int, *, unit: str = \"px\"):\n",
+    "    return f\"{width}×{height} {unit}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3ba96760-06b3-48ef-87d5-d055e4ea46d1",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1920×1080 px'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dims = (1920, 1080)           # tuple\n",
+    "area(*dims)                   # '1920×1080 px'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9e375a5b-0619-47e0-9f51-25bda1eb4cdf",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1920×1080 pt'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opts  = {\"unit\": \"pt\"}        # dict\n",
+    "area(*dims, **opts)           # '1920×1080 pt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b858641-ac30-421b-b01c-1781363be250",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "* `*` unpacks any **iterable** into positional args.\n",
+    "* `**` unpacks a **mapping** into keyword args (keys must match parameter names)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77a35cc4-2798-4b03-8d17-01e83afd15ac",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Forwarding to another function (wrappers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2910779b-3f9e-419d-9338-d8b48778b50d",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def core(a, b, *, scale=1.0, bias=0.0):\n",
+    "    return a * scale + b + bias\n",
+    "\n",
+    "def wrapper(*args, **kwargs):\n",
+    "    # pre/post work here (logging, timing, validation…)\n",
+    "    return core(*args, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf5c1a76-8798-4626-9ff5-0aceb138eb32",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "\n",
+    "* Often seen in official documents, e.g. [here](https://matplotlib.org/3.5.3/api/_as_gen/matplotlib.pyplot.bar.html)\n",
+    "* See the source code\n",
+    "* Helpful for **wrappers** that forward extra args/kwargs\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "88915ac3-73bc-4773-8a9a-0c7fa6b17d0d",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrapper(3, 4, scale=2, bias=0.5)  # forwards all args to core"
    ]
   },
   {
