Adjust the function for count_words

--- a/lectures/lec05_20250930/lec05_activity.ipynb
+++ b/lectures/lec05_20250930/lec05_activity.ipynb
@@ -38,10 +38,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def count_words(text):\n",
+    "    return text.count(\" \") + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hi', 'I', 'am', 'a', '', '', '', '', '', 'string']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_list = \"Hi I am a      string\".split(\" \")\n",
+    "text_list_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_words(\"Hi I am a      string\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -375,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
